--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href=""></a>Studio</li>
-                <li><a href=""></a>Portfolio</li>
-                <li><a href=""></a>Contacts</li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -28,46 +28,47 @@
             <button type="button">Order Service</button>
         </section>
         <section id="info">
+            <h2></h2>
          <ul>
             <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>    
             </li>
             <li>    
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>    
             </li>  
             <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>    
             </li>
             <li>   
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li> 
          </ul>   
         </section>
         <section id="team">
-           <h2>Our Team</h2>
+           <h3>Our Team</h3>
            <ul>
             <li>
-                <img src="./image/Mark.jpg" alt="Photo" width="264">
-                <h3>Mark Guerrero</h3>
-                <p>Porduct Designer</p>
+                <img src="./images/Mark.jpg" alt="Photo" width="264">
+                <h4>Mark Guerrero</h4>
+                <p>Product Designer</p>
             </li>
             <li>
-                <img src="./image/Tom.jpg" alt="Photo" width="264">
-                <h3>Tom Ford</h3>
+                <img src="./images/Tom.jpg" alt="Photo" width="264">
+                <h4>Tom Ford</h4>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./image/Camila.jpg" alt="Photo" width="264">
-                <h3>Camila Garcia</h3>
+                <img src="./images/Camila.jpg" alt="Photo" width="264">
+                <h4>Camila Garcia</h4>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./image/Daniel.jpg" alt="Photo" width="264">
-                <h3>Daniel Wilson</h3>
+                <img src="./images/Daniel.jpg" alt="Photo" width="264">
+                <h4>Daniel Wilson</h4>
                 <p>UI Designer</p>
             </li>
            </ul>
@@ -75,7 +76,7 @@
        
     </main> 
         <footer id="bottom">
-        <h3>WebStudio</h3>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
 </body>
