--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button type="button">Order Service</button>
         </section>
         <section id="info">
-            <h2></h2>
+            <h2>Info</h2>
          <ul>
             <li>
             <h3>Strategy</h3>
@@ -49,26 +49,26 @@
          </ul>   
         </section>
         <section id="team">
-           <h3>Our Team</h3>
+           <h2>Our Team</h2>
            <ul>
             <li>
                 <img src="./images/Mark.jpg" alt="Photo" width="264">
-                <h4>Mark Guerrero</h4>
+                <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/Tom.jpg" alt="Photo" width="264">
-                <h4>Tom Ford</h4>
+                <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/Camila.jpg" alt="Photo" width="264">
-                <h4>Camila Garcia</h4>
+                <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/Daniel.jpg" alt="Photo" width="264">
-                <h4>Daniel Wilson</h4>
+                <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
            </ul>
