add markup header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header" id="top">
          <nav class="header_nav">
 
-            <a  class="header_logo" href="">Web<span class="logo_studio">Studio</span></a>
+            <a  class="header_logo" href="./index.html">Web<span class="logo_studio">Studio</span></a>
 
             <ul class="header-nav-list">
                 <li class="header_nav_list_item"><a  class="nav_list_link" href="">Studio</a></li>
@@ -126,7 +126,7 @@
                 </li>
 
                 <li class="portfolio_list_item">
-                  <img src="/images/Med_App.jpg" alt="Photo" width="360" height="300">
+                  <img src="./images/Med_App.jpg" alt="Photo" width="360" height="300">
                     <h3 class="portfolio_list_item_title">Meditation App</h3>
                     <p class="portfolio_list_item_text">App</p>
                     
