add markup header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header" id="top">
          <nav class="header_nav">
 
-            <a  class="header_logo" href="./index.html">Web<span class="logo_studio">Studio</span></a>
+            <a  class="header_logo" href="./index.html">Web<span class="logo_studio" href="./index.html">Studio</span></a>
 
             <ul class="header-nav-list">
                 <li class="header_nav_list_item"><a  class="nav_list_link" href="">Studio</a></li>
