--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             Web<span class="logo_studio" >Studio</span></a>
 
             <ul class="header-nav-list">
-                <li class="header_nav_list_item"><a  class="nav_list_link" href="">Studio</a></li>
-                <li class="header_nav_list_item"><a  class="nav_list_link" href="">Portfolio</a></li>
-                <li class="header_nav_list_item"><a  class="nav_list_link" href="">Contacts</a></li>
+                <li class="header_nav_list_item"><a  class="nav_list_link" href="./index.html">Studio</a></li>
+                <li class="header_nav_list_item"><a  class="nav_list_link" href="./index.html">Portfolio</a></li>
+                <li class="header_nav_list_item"><a  class="nav_list_link" href="./index.html">Contacts</a></li>
             </ul>
          </nav>    
 
