add markup header

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
             <ul class="header-nav-list">
                 <li class="header_nav_list_item"><a  class="nav_list_link" href="./index.html">Studio</a></li>
-                <li class="header_nav_list_item"><a  class="nav_list_link" href="./index.html">Portfolio</a></li>
-                <li class="header_nav_list_item"><a  class="nav_list_link" href="./index.html">Contacts</a></li>
+                <li class="header_nav_list_item"><a  class="nav_list_link" href="">Portfolio</a></li>
+                <li class="header_nav_list_item"><a  class="nav_list_link" href="gi">Contacts</a></li>
             </ul>
          </nav>    
 
