--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="header-nav-list">
                 <li class="header_nav_list_item"><a  class="nav_list_link" href="./index.html">Studio</a></li>
                 <li class="header_nav_list_item"><a  class="nav_list_link" href="">Portfolio</a></li>
-                <li class="header_nav_list_item"><a  class="nav_list_link" href="gi">Contacts</a></li>
+                <li class="header_nav_list_item"><a  class="nav_list_link" href="">Contacts</a></li>
             </ul>
          </nav>    
 
