add markup header

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="./css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-     integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <link rel="stylesheet" href="./css/styles.css" />
+     integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" 
+     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 
 </head>
 <body>
         <!--Header-->
     <header class="header" id="top">
-      <div class="conteiner_header conteiner">
+      <div class="conteiner_header container">
          <nav class="header_nav">
 
             <a  href="./index.html" class="header_logo">
@@ -43,7 +44,7 @@
     <main>
         
         <section class="hero_baner" id="banner">
-         <div class="conteiner">
+         <div class="container">
             <h1 class="hero_baner_title">Effective Solutions for Your Business</h1>
             <button class="hero_baner_button" type="button">Order Service</button>
          </div>
@@ -52,7 +53,7 @@
          <!--Features Section-->
 
         <section class="features" id="info">
-         <div class="conteiner">
+         <div class="container">
             <h2  class="features_head_title">Info</h2>
           <ul  class="features_list">
 
@@ -83,7 +84,7 @@
         <!--Team-->
 
         <section class="team" id="team">
-            <div class="conteiner" >
+            <div class="container" >
            <h2 class="team_title">Our Team</h2>
            <ul class="team_list">
             <li class="team_list_item">
@@ -129,7 +130,7 @@
         <!--Portfolio-->
 
         <section class="portfolio" id="portfolio">
-            <div class="conteiner">
+            <div class="container">
             <h2 class="portfolio_title">Our Portfolio</h2>
             <ul class="portfolio_list">
 
@@ -195,7 +196,7 @@
         <!--Footer-->
 
         <footer class="footer" id="bottom">
-        <div class="conteiner">
+        <div class="container">
         <a class="footer_logo" href="./index.html">Web<span class="logo_studio">Studio</span></a>
         <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
