add markup header

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li class="features_list_item">
              <div class="features_item_svg">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-antena"></use>
+                  <use href="./images/icons.svg#icon-antena"></use>
                 </svg>
               </div> 
             <h3 class="features_list_item_titles">Strategy</h3>
@@ -69,7 +69,7 @@
             <li class="features_list_item">  
               <div class="features_item_svg">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-time"></use>
+                  <use href="./images/icons.svg#icon-time"></use>
                 </svg>
               </div>   
             <h3 class="features_list_item_titles">Punctuality</h3>
@@ -79,7 +79,7 @@
             <li class="features_list_item">
               <div class="features_item_svg">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-comp"></use>
+                  <use href="./images/icons.svg#icon-comp"></use>
                 </svg>
               </div>
             <h3 class="features_list_item_titles">Diligence</h3>
@@ -89,7 +89,7 @@
             <li class="features_list_item">  
               <div class="features_item_svg">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-cosmos"></use>
+                  <use href="./images/icons.svg#icon-cosmos"></use>
                 </svg>
               </div> 
             <h3 class="features_list_item_titles">Technologies</h3>
@@ -120,7 +120,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -131,7 +131,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twiter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -142,7 +142,7 @@
                       target="_blank"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -153,7 +153,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -175,7 +175,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,7 +186,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twiter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -197,7 +197,7 @@
                       target="_blank"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -208,7 +208,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -230,7 +230,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -241,7 +241,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twiter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -252,7 +252,7 @@
                       target="_blank"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -263,7 +263,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -285,7 +285,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -296,7 +296,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twiter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -306,8 +306,8 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <svg class="social_icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -318,7 +318,7 @@
                       target="_blank"
                     >
                       <svg class="social_icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -459,7 +459,7 @@
                       target="_blank"
                     >
                       <svg class="footer_social_icon" width="24" height="24">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -470,7 +470,7 @@
                       target="_blank"
                     >
                       <svg class="footer_social_icon" width="24" height="24">
-                        <use href="./images/symbol-defs.svg#icon-twiter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -481,7 +481,7 @@
                       target="_blank"
                     >
                       <svg class="footer_social_icon" width="24" height="24">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -492,7 +492,7 @@
                       target="_blank"
                     >
                       <svg class="footer_social_icon" width="24" height="24">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
