--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="social_icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -196,7 +196,7 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="social_icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -251,7 +251,7 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="social_icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
