add markup header

--- a/index.html
+++ b/index.html
@@ -500,5 +500,66 @@
               </div>
              </div>
            </footer>
+        <div class="overlay_form" >
+          <div class="form">
+            <button class="button_form" aria-label="Close modal" data-modal-close>
+              <svg class="close_icon" width="8" height="8">
+                <use href=" ./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+            <p class="backdrop_heading">Leave your contacts and we will call you back</p>
+           <form class="form_backrop"> 
+            <div class="form_fieldset">
+              <label class="form_label">Name</label>      
+                <div class="input_container">             
+                  <input class="input_form" type="text" name="Name" >
+                  <svg class="input_icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-name"></use>
+                  </svg>
+                 </div>  
+            </div>
+            <div class="form_fieldset">
+              <label class="form_label">Phone</label>
+                <div class="input_container">
+                  <input class="input_form" type="tel" name="Phone">
+                   <svg class="input_icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-phone"></use>
+                  </svg>
+                </div>
+            </div> 
+            
+            <div class="form_fieldset">
+              <label class="form_label">Email</label>
+                <div class="input_container">
+                  <input class="input_form" type="email" name="Email">
+                  <svg class="input_icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-email"></use>
+                  </svg>
+                </div>
+            </div>
+
+            <div class="form_fieldset">
+              <label class="form_label">Comment</label>
+                <div class="input_container">
+                  <textarea class="input_form textarea" placeholder="Text input" name="comment"></textarea>
+                </div>
+            </div>
+             <div class="form_fieldset">
+              <h3 class="privacy_heading"></h3>
+                <label class="privacy_element">
+                  <input type="checkbox" class="checkbox_form" name="checkbox" />
+                    <span class="custom_checkbox"></span>
+                      I accept the terms and conditions of the
+                    <span class="privacy_span">
+                    <a href="" class="privacy">Privacy Policy</a>
+                    </span>
+                  
+                </label>
+             </div>
+              <button type="button" class="form_button">Send</button>
+           </form>
+        </div>
+      </div>
 </body>
 </html>
+
