add markup header

--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
             </div>
 
             <div class="form_fieldset_comment">
-              <label class="form_label">Comment</label>
-                <div for="user-comment" class="input_container">
+              <label  class="form_label">Comment</label>
+                <div class="input_container">
                   <textarea class="input_form_textarea" placeholder="Text input" name="comment"></textarea>
                 </div>
             </div>
@@ -594,6 +594,9 @@
               </div>
         </div> 
       </form>
+      </div>
+    </div>
+        
 </body>
 </html>
 
