--- a/index.html
+++ b/index.html
@@ -532,13 +532,13 @@
           <div class="form">
             <button type="button" class="button_form" data-modal-close>
               <svg class="close_icon" width="8" height="8">
-                <use href=" ./images/icons.svg#icon-close"></use>
+                <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
             <p class="backdrop_heading">Leave your contacts and we will call you back</p>
            <form class="form_backrop"> 
             <div class="form_fieldset">
-              <label class="form_label">Name</label>      
+              <label class="form_label" for="user-name">Name</label>      
                 <div class="input_container">             
                   <input class="input_form" type="text" id="user-name" name="user-name" >
                   <svg class="input_icon" width="18" height="24">
@@ -567,10 +567,8 @@
             </div>
 
             <div class="form_fieldset_comment">
-              <label  class="form_label">Comment</label>
-                <div class="input_container">
-                  <textarea class="input_form_textarea" placeholder="Text input" name="comment"></textarea>
-                </div>
+              <label  class="form_label" for="user-comment">Comment</label>
+                  <textarea class="input_form_textarea" id="user-comment" placeholder="Text input" name="user-comment"></textarea>  
             </div>
           <div class="form_fieldset_checkbox">
            <label for="user-privacy" class="form_label">
