--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <address class="mobile_menu_address">
       <ul class="mobile_menu_address_list">
         <li class="mobile_menu_address_list_item">
-          <a class="mobile_menu_address_list_item_link accent" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a class="mobile_menu_address_list_item_link main_address_link" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
         <li class="mobile_menu_address_list_item">
           <a class="mobile_menu_address_list_item_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -118,7 +118,7 @@
     <main>
         <section class="hero_baner" id="banner">
          <div class="container">
-            <h1 class="hero_baner_title">Effective Solutions for Your Business</h1>
+            <h1 class="hero_baner_title">Effective Solutions <br>for Your Business</h1>
             <button class="hero_baner_button" type="button" data-modal-open>Order Service</button>
          </div>
          </section>
@@ -609,7 +609,7 @@
         <!--Footer-->
 
         <footer class="footer" id="bottom">
-        <div class="container footer_container">
+        <div class="container footer_container footer_icons">
           <div class="footer_container_logo">
             <a class="footer_logo" href="./index.html">Web<span class="logo_studio">Studio</span></a>
             <p class="footer_text">Increase the flow of customers and sales for your business with
@@ -744,15 +744,19 @@
               value="true"
               class="visually-hidden checkbox-input"
             />
-            <label for="user-privacy" class="form_label">
-              <span class="checkbox_custom">
-                <svg width="10" height="8" class="checkbox_icon">
-                  <use href="./images/icons.svg#icon-vector"></use>
-                </svg>
-              </span>
-              I accept the terms and conditions of the
-              <a href="#" class="policy_link">Privacy Policy</a>
-            </label>
+<label class="form_label" for="user-privacy">
+  <input type="checkbox" id="user-privacy" class="checkbox-input visually-hidden" />
+  <span class="checkbox_custom" aria-hidden="true">
+    <svg width="10" height="8" class="checkbox_icon">
+      <use href="./images/icons.svg#icon-vector"></use>
+    </svg>
+  </span>
+
+  <span class="form_label_text">
+    I accept the terms and conditions of the
+    <a href="#" class="policy_link">Privacy Policy</a>
+  </span>
+</label>
           </div>
           <button type="submit" class="form_button">Send</button>
       </form>
